<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".ReminderActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectedTime"
        android:text="@string/_8_30_pm"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:gravity="center"
        android:fontFamily="sans-serif"/>
    <Button
        android:id="@+id/selectTimeBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="26dp"
        android:text="@string/select_time"
        android:textSize="26sp"/>
    <Button
        android:id="@+id/setAlarmBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="26dp"
        android:text="@string/set_sound"
        android:textSize="26sp"/>
    <Button
        android:id="@+id/cancelAlarmBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="26dp"
        android:text="@string/cancel_reminder"
        android:textSize="26sp"/>


</LinearLayout>