<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".CreateCard">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/task"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_assignment"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:background="@drawable/custom_edittext"
        android:textColorHint="#BFBBBB"
        android:textColor="@color/white"
        android:inputType=""
        android:autofillHints="" />

    <EditText
        android:id="@+id/create_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/priority"
        android:padding="15dp"
        android:background="@drawable/custom_edittext"
        android:textColorHint="#BFBBBB"
        android:textColor="@color/white"
        />
    <EditText
        android:id="@+id/create_Details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/details"
        android:padding="15dp"
        android:background="@drawable/custom_edittext"
        android:textColorHint="#BFBBBB"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/white">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-30dp"
            android:layout_marginRight="-30dp"
            android:layout_weight="1"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:calendarTextColor="@color/black" />
        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:layout_gravity="center"
            android:numbersTextColor="@color/black"
            android:scaleY="0.7"
            android:scaleX="0.7"
            android:layout_marginLeft="-30dp"
            android:layout_marginRight="-30dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/save"/>

</LinearLayout>