<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-127dp"
    android:fillViewport="true"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginEnd="132dp"
            android:contentDescription="TODO"
            tools:ignore="ImageContrastCheck,ImageContrastCheck,ImageContrastCheck,ImageContrastCheck,ImageContrastCheck,ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/stName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView3"
            android:layout_marginStart="93dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="93dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/stEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="93dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="91dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/stPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextEmailAddress"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="93dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="93dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/stPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="92dp"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="93dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/stPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="93dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="92dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="131dp"
        android:text="Register" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="109dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="103dp"
            android:layout_marginBottom="11dp"
            android:text="Have an account?...LOGIN"
            android:textColor="#00838F" />
    </LinearLayout>

</ScrollView>